--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,11 @@ repositories {
 
 dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.5.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.6'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.6'
 }
-
 
 application {
     mainClass = 'com.tomgregory.Application'
