Enable build scan auto-accept terms of service.

--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,8 @@ dependencies {
 application {
     mainClass = 'com.tomgregory.Application'
 }
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+}
