--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,12 +10,6 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'
-          cache: gradle
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build --scan
-      - name: Cleanup Gradle Cache
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+      - uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build --scan
