--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,6 +10,8 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - uses: gradle/gradle-build-action@v2
         with:
           arguments: build --scan
