--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,3 +46,25 @@ jobs:
       - uses: gradle/gradle-build-action@v2
         with:
           arguments: build --scan
+  build-with-upload-artifact:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build --scan
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Package
+          path: build/libs
+      - name: Cleanup Gradle Cache
+        run: |
+          rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          rm -f ~/.gradle/caches/modules-2/gc.properties
