--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.6'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.5.6'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.5.6'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.6'
+    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.5.6'
 }
 
 application {
@@ -21,4 +21,12 @@ application {
 buildScan {
     termsOfServiceUrl = 'https://gradle.com/terms-of-service'
     termsOfServiceAgree = 'yes'
+}
+
+testing {
+    suites {
+        test {
+            useJUnitJupiter()
+        }
+    }
 }
