--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Inspect temp
-        run: find /home/runner/work/_temp/ -name "cache.tzst"
+        run: find /home/runner/work/_temp/
       - name: Inspect root after
         run: pwd && ls -la .
       - name: Build with Gradle
