--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,60 +7,54 @@ on:
   workflow_dispatch:
     branches: [ master ]
 jobs:
-#  build-without-cache:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v2
-#        with:
-#          java-version: 17
-#          distribution: 'adopt'
-#      - name: Build with Gradle
-#        run: ./gradlew build --scan
+  build-without-cache:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+      - name: Build with Gradle
+        run: ./gradlew build --scan
   build-with-setup-java-cache:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Inspect root before
-        run: pwd && ls -la .
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: 17
           distribution: 'adopt'
           cache: gradle
-      - name: Inspect temp
-        run: find /home/runner/work/_temp/
-      - name: Inspect root after
-        run: pwd && ls -la .
       - name: Build with Gradle
         run: ./gradlew build --scan --no-daemon
-#  build-with-gradle-build-action-cache:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v2
-#        with:
-#          java-version: 17
-#          distribution: 'adopt'
-#      - uses: gradle/gradle-build-action@v2
-#        with:
-#          arguments: build --scan
-#  build-with-upload-artifact:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v2
-#        with:
-#          java-version: 17
-#          distribution: 'adopt'
-#          cache: gradle
-#      - name: Build with Gradle
-#        run: ./gradlew build --scan --no-daemon
-#      - uses: actions/upload-artifact@v2
-#        with:
-#          name: Package
-#          path: build/libs
+  build-with-gradle-build-action-cache:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+      - uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build --scan
+  build-with-upload-artifact:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+          cache: gradle
+      - name: Build with Gradle
+        run: ./gradlew build --scan --no-daemon
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Package
+          path: build/libs
