--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,7 +1,7 @@
 name: CI
-on: [push, pull_request, workflow_dispatch]
+on: [push]
 jobs:
-  build-without-cache:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -11,44 +11,4 @@ jobs:
           java-version: 17
           distribution: 'adopt'
       - name: Build with Gradle
-        run: ./gradlew build --scan
-  build-with-setup-java-cache:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-          cache: gradle
-      - name: Build with Gradle
-        run: ./gradlew build --scan --no-daemon
-  build-with-gradle-build-action-cache:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build --scan
-  build-with-upload-artifact:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-          cache: gradle
-      - name: Build with Gradle
-        run: ./gradlew build --scan --no-daemon
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Package
-          path: build/libs
+        run: ./gradlew build
