--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,3 +18,8 @@ jobs:
           cache: gradle
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: build/reports/tests/test
