--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,8 +18,8 @@ jobs:
           cache: gradle
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Archive code coverage results
+      - name: Archive test report
         uses: actions/upload-artifact@v2
         with:
-          name: code-coverage-report
+          name: Test report
           path: build/reports/tests/test
