--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -56,4 +56,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: Test report
-          path: build/reports/tests/test
+          path: build/reports/tests
