--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   call-workflow:
-    uses: Vishwastp89/gradle-github-actions-example/.github/workflows/IAS.yml@main
+    uses: Vishwastp89/gradle-github-actions-example/.github/workflows/IAS.yml
     
   build-without-cache:
     runs-on: ubuntu-latest
