--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,44 +16,44 @@ jobs:
           distribution: 'adopt'
       - name: Build with Gradle
         run: ./gradlew build --scan
-  build-with-setup-java-cache:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-          cache: gradle
-      - name: Build with Gradle
-        run: ./gradlew build --scan --no-daemon
-  build-with-gradle-build-action-cache:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-      - uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build --scan
-  build-with-upload-artifact:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: 17
-          distribution: 'adopt'
-          cache: gradle
-      - name: Build with Gradle
-        run: ./gradlew build --scan --no-daemon
-      - name: Archive test report
-        uses: actions/upload-artifact@v2
-        with:
-          name: Test report
-          path: build/reports/tests/test
+  # build-with-setup-java-cache:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v2
+  #       with:
+  #         java-version: 17
+  #         distribution: 'adopt'
+  #         cache: gradle
+  #     - name: Build with Gradle
+  #       run: ./gradlew build --scan --no-daemon
+  # build-with-gradle-build-action-cache:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v2
+  #       with:
+  #         java-version: 17
+  #         distribution: 'adopt'
+  #     - uses: gradle/gradle-build-action@v2
+  #       with:
+  #         arguments: build --scan
+  # build-with-upload-artifact:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v2
+  #       with:
+  #         java-version: 17
+  #         distribution: 'adopt'
+  #         cache: gradle
+  #     - name: Build with Gradle
+  #       run: ./gradlew build --scan --no-daemon
+  #     - name: Archive test report
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: Test report
+  #         path: build/reports/tests/test
