--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,6 +19,8 @@ jobs:
         run: |
          ./gradlew build
          ls -la
+         cd /build/libs
+         ls -la
   # build-with-setup-java-cache:
   #   runs-on: ubuntu-latest
   #   steps:
