--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,14 @@ jobs:
            echo  Phoenix@565  | docker login -u  prem19  --password-stdin
            docker push prem19/prem1903:${GITHUB_RUN_NUMBER}
       - name: SonarCloud Scan
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Install dependencies
+        run: yarn
+      - name: Test and coverage
+        run: yarn jest --coverage
+      - name: SonarCloud Scan 
         uses: sonarsource/sonarcloud-github-action@master
         env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
