--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,6 +39,16 @@ jobs:
         run: |
            echo  Phoenix@565  | docker login -u  prem19  --password-stdin
            docker push prem19/prem1903:${GITHUB_RUN_NUMBER}
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+             paths: |
+              build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
+              build/reports/jacoco/**/debugCoverage.xml
+             token: ${{ secrets.GITHUB_TOKEN }}
+             min-coverage-overall: 40
+             min-coverage-changed-files: 60
       - name: SonarCloud Scan
         uses: actions/checkout@v2
         with:
@@ -47,11 +57,11 @@ jobs:
       #   run: yarn
       # - name: Test and coverage
       #   run: yarn jest --coverage
-      - name: SonarCloud Scan 
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # - name: SonarCloud Scan 
+      #   uses: sonarsource/sonarcloud-github-action@master
+      #   env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   # build-with-setup-java-cache:
   #   runs-on: ubuntu-latest
   #   steps:
