gradle simple file

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,8 +44,9 @@ jobs:
         uses: madrapps/jacoco-report@v1.6.1
         with:
              paths: |
-              build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
-              build/reports/jacoco/**/debugCoverage.xml
+              build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.html,
+              ls -la
+              build/reports/jacoco/**/debugCoverage.html
              token: ${{ secrets.GITHUB_TOKEN }}
              min-coverage-overall: 40
              min-coverage-changed-files: 60
