--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,17 @@ jobs:
          ls -la
          cd build/libs
          ls -la
+      - name: Add coverage to PR
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.6.1
+        with:
+              paths: |
+               build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.html
+               ls -la
+               build/reports/jacoco/**/debugCoverage.html
+              token: ${{ secrets.GITHUB_TOKEN }}
+              min-coverage-overall: 40
+              min-coverage-changed-files: 60
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -44,16 +55,16 @@ jobs:
         uses: madrapps/jacoco-report@v1.6.1
         with:
              paths: |
-              build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.html,
+              build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.html
               ls -la
               build/reports/jacoco/**/debugCoverage.html
              token: ${{ secrets.GITHUB_TOKEN }}
              min-coverage-overall: 40
              min-coverage-changed-files: 60
-      - name: SonarCloud Scan
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      # - name: SonarCloud Scan
+      #   uses: actions/checkout@v2
+      #   with:
+      #     fetch-depth: 0
       # - name: Install dependencies
       #   run: yarn
       # - name: Test and coverage
