--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,17 +63,17 @@ jobs:
         run: |
            echo  Phoenix@565  | docker login -u  prem19  --password-stdin
            docker push prem19/prem1903:${GITHUB_RUN_NUMBER}
-      - name: Add coverage to PR
-        id: jacoco
-        uses: madrapps/jacoco-report@v1.6.1
-        with:
-             paths: |
-              build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.html
-              ls -la
-              build/reports/jacoco/**/debugCoverage.html
-             token: ${{ secrets.GITHUB_TOKEN }}
-             min-coverage-overall: 40
-             min-coverage-changed-files: 60
+      # - name: Add coverage to PR
+      #   id: jacoco
+      #   uses: madrapps/jacoco-report@v1.6.1
+      #   with:
+      #        paths: |
+      #         build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.html
+      #         ls -la
+      #         build/reports/jacoco/**/debugCoverage.html
+      #        token: ${{ secrets.GITHUB_TOKEN }}
+      #        min-coverage-overall: 40
+      #        min-coverage-changed-files: 60
       # - name: SonarCloud Scan
       #   uses: actions/checkout@v2
       #   with:
